// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsSubscriptionsPage should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          Subscriptions
        </h1>
      </div>
      <div
        class="ebhrnzh-el-loader-container"
      >
        <div
          class="eq1m1jz-el-loader"
        >
          <div
            class="exikdu1-el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        class="ec47sgk-el-mb11 elkdvoz-el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="7"
      >
        <div
          class="e1co3p83-el-table-headers-row"
        >
          <div
            class="e1mqmoqy-el-span2 e1qy4g2u-el-table-header"
          >
            Type
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Start Date
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Renewal Date
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Frequency
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Cost
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Status
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Cancel Subscription
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-row-container"
        >
          <div
            class="es3tf1j-el-table-row"
          >
            <div
              class="e1mqmoqy-el-span2 eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Type"
              >
                Developer edition license for test@example.com
              </div>
            </div>
            <div
              class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M17.7083 20H2.29172C1.02753 20 0 18.9725 0 17.7083V3.95831C0 2.69412 1.02753 1.66675 2.29172 1.66675H17.7083C18.9725 1.66675 20 2.69412 20 3.95831V17.7083C20 18.9725 18.9725 20 17.7083 20ZM2.29172 2.91675C1.71753 2.91675 1.25 3.38412 1.25 3.95831V17.7083C1.25 18.2825 1.71753 18.75 2.29172 18.75H17.7083C18.2825 18.75 18.75 18.2825 18.75 17.7083V3.95831C18.75 3.38412 18.2825 2.91675 17.7083 2.91675H2.29172Z"
                      fill="currentColor"
                    />
                    <path
                      d="M19.375 7.91675H0.625C0.279999 7.91675 0 7.63675 0 7.29175C0 6.94675 0.279999 6.66675 0.625 6.66675H19.375C19.72 6.66675 20 6.94675 20 7.29175C20 7.63675 19.72 7.91675 19.375 7.91675Z"
                      fill="currentColor"
                    />
                    <path
                      d="M4.79169 5C4.44669 5 4.16669 4.72 4.16669 4.375V0.625C4.16669 0.279999 4.44669 0 4.79169 0C5.13669 0 5.41669 0.279999 5.41669 0.625V4.375C5.41669 4.72 5.13669 5 4.79169 5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M15.2083 5C14.8633 5 14.5833 4.72 14.5833 4.375V0.625C14.5833 0.279999 14.8633 0 15.2083 0C15.5533 0 15.8333 0.279999 15.8333 0.625V4.375C15.8333 4.72 15.5533 5 15.2083 5Z"
                      fill="currentColor"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="10"
                      cy="12"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="15"
                      cy="12"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="15"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="10"
                      cy="15"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="15"
                      cy="15"
                      fill="currentColor"
                      r="1"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0"
                    >
                      <rect
                        fill="white"
                        height="1em"
                        width="1em"
                      />
                    </clippath>
                  </defs>
                </svg>
              </span>
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Start Date"
              >
                16 May 2021
              </div>
            </div>
            <div
              class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M17.7083 20H2.29172C1.02753 20 0 18.9725 0 17.7083V3.95831C0 2.69412 1.02753 1.66675 2.29172 1.66675H17.7083C18.9725 1.66675 20 2.69412 20 3.95831V17.7083C20 18.9725 18.9725 20 17.7083 20ZM2.29172 2.91675C1.71753 2.91675 1.25 3.38412 1.25 3.95831V17.7083C1.25 18.2825 1.71753 18.75 2.29172 18.75H17.7083C18.2825 18.75 18.75 18.2825 18.75 17.7083V3.95831C18.75 3.38412 18.2825 2.91675 17.7083 2.91675H2.29172Z"
                      fill="currentColor"
                    />
                    <path
                      d="M19.375 7.91675H0.625C0.279999 7.91675 0 7.63675 0 7.29175C0 6.94675 0.279999 6.66675 0.625 6.66675H19.375C19.72 6.66675 20 6.94675 20 7.29175C20 7.63675 19.72 7.91675 19.375 7.91675Z"
                      fill="currentColor"
                    />
                    <path
                      d="M4.79169 5C4.44669 5 4.16669 4.72 4.16669 4.375V0.625C4.16669 0.279999 4.44669 0 4.79169 0C5.13669 0 5.41669 0.279999 5.41669 0.625V4.375C5.41669 4.72 5.13669 5 4.79169 5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M15.2083 5C14.8633 5 14.5833 4.72 14.5833 4.375V0.625C14.5833 0.279999 14.8633 0 15.2083 0C15.5533 0 15.8333 0.279999 15.8333 0.625V4.375C15.8333 4.72 15.5533 5 15.2083 5Z"
                      fill="currentColor"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="10"
                      cy="12"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="15"
                      cy="12"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="15"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="10"
                      cy="15"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="15"
                      cy="15"
                      fill="currentColor"
                      r="1"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0"
                    >
                      <rect
                        fill="white"
                        height="1em"
                        width="1em"
                      />
                    </clippath>
                  </defs>
                </svg>
              </span>
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Renewal Date"
              >
                01 Mar 2022
              </div>
            </div>
            <div
              class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Frequency"
              >
                Monthly
              </div>
            </div>
            <div
              class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      clip-rule="evenodd"
                      d="M13.6903 0.0656733C13.1939 -0.0669626 12.6742 0.0028151 12.23 0.261338L3.44771 5.37422H1.93911C0.86957 5.37422 0 6.24374 0 7.31333V18.0612C0 19.1307 0.869524 20.0003 1.93911 20.0003H17.1653C18.2348 20.0003 19.1044 19.1308 19.1044 18.0612V15.392C19.629 15.1621 20 14.642 20 14.0307V11.3438C20 10.7325 19.629 10.2124 19.1044 9.98254V7.31333C19.1044 6.32232 18.3562 5.51312 17.3983 5.39706L14.8641 0.970641C14.6063 0.52126 14.1891 0.199222 13.6903 0.0656733ZM12.8298 1.29066C12.9981 1.19218 13.194 1.16604 13.3822 1.21625C13.5254 1.25457 13.6506 1.33351 13.7461 1.44409L6.9958 5.37422H5.81531L12.8298 1.29066ZM10.5439 5.37422H9.36323L14.3499 2.47087L14.6452 2.98649L10.5439 5.37422ZM16.0122 5.37422H12.9114L15.237 4.02025L16.0122 5.37422ZM1.19125 7.31333C1.19125 6.90122 1.527 6.56547 1.93911 6.56547H17.1653C17.5774 6.56547 17.9131 6.90122 17.9131 7.31333V9.85251H15.3739C13.8106 9.85251 12.5392 11.1239 12.5392 12.6873C12.5392 14.2506 13.8106 15.522 15.3739 15.522H17.9131V18.0612C17.9131 18.4733 17.5774 18.809 17.1653 18.809H1.93911C1.527 18.809 1.19125 18.4733 1.19125 18.0612V7.31333ZM13.7304 12.6873C13.7304 11.781 14.4676 11.0437 15.3739 11.0437H18.5087C18.6742 11.0437 18.8088 11.1783 18.8088 11.3438V14.0307C18.8088 14.1962 18.6742 14.3308 18.5087 14.3308H15.3739C14.4676 14.3308 13.7304 13.5936 13.7304 12.6873Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0"
                    >
                      <rect
                        fill="white"
                        height="20.0003"
                        width="20"
                      />
                    </clippath>
                  </defs>
                </svg>
              </span>
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Cost"
              >
                £300
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Status"
              >
                <span
                  class="e1vxext9-el-intent-danger e1cp9zgf-el-status-indicator"
                />
                 
                Cancelled
              </div>
            </div>
            <div
              class="e1fmntjl-el-table-cta-cell"
            >
              <div
                class="ewmoxzc-el-table-cta-icon-container"
              >
                <span
                  class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                      fill="currentColor"
                    />
                    <path
                      d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="e1nnyshg-el-pagination-wrap"
      >
        <div
          class="ex6bmfc-el-pagination-text"
        >
          <strong>
            1
          </strong>
           of 
          10
        </div>
        <button
          class="e1yynswi-el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 5.5L8 9.39711L8 1.60289L2 5.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="e1yynswi-el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="e1g9l338-el-pagination-primary ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 5.5L3 9.39711L3 1.60289L9 5.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="evblxhy-el-title"
      >
        Subscriptions
      </h1>
    </div>
    <div
      class="ebhrnzh-el-loader-container"
    >
      <div
        class="eq1m1jz-el-loader"
      >
        <div
          class="exikdu1-el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      class="ec47sgk-el-mb11 elkdvoz-el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="7"
    >
      <div
        class="e1co3p83-el-table-headers-row"
      >
        <div
          class="e1mqmoqy-el-span2 e1qy4g2u-el-table-header"
        >
          Type
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Start Date
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Renewal Date
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Frequency
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Cost
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Status
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Cancel Subscription
        </div>
      </div>
      <div
        class="e1gfmg2g-el-table-row-container"
      >
        <div
          class="es3tf1j-el-table-row"
        >
          <div
            class="e1mqmoqy-el-span2 eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Type"
            >
              Developer edition license for test@example.com
            </div>
          </div>
          <div
            class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M17.7083 20H2.29172C1.02753 20 0 18.9725 0 17.7083V3.95831C0 2.69412 1.02753 1.66675 2.29172 1.66675H17.7083C18.9725 1.66675 20 2.69412 20 3.95831V17.7083C20 18.9725 18.9725 20 17.7083 20ZM2.29172 2.91675C1.71753 2.91675 1.25 3.38412 1.25 3.95831V17.7083C1.25 18.2825 1.71753 18.75 2.29172 18.75H17.7083C18.2825 18.75 18.75 18.2825 18.75 17.7083V3.95831C18.75 3.38412 18.2825 2.91675 17.7083 2.91675H2.29172Z"
                    fill="currentColor"
                  />
                  <path
                    d="M19.375 7.91675H0.625C0.279999 7.91675 0 7.63675 0 7.29175C0 6.94675 0.279999 6.66675 0.625 6.66675H19.375C19.72 6.66675 20 6.94675 20 7.29175C20 7.63675 19.72 7.91675 19.375 7.91675Z"
                    fill="currentColor"
                  />
                  <path
                    d="M4.79169 5C4.44669 5 4.16669 4.72 4.16669 4.375V0.625C4.16669 0.279999 4.44669 0 4.79169 0C5.13669 0 5.41669 0.279999 5.41669 0.625V4.375C5.41669 4.72 5.13669 5 4.79169 5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M15.2083 5C14.8633 5 14.5833 4.72 14.5833 4.375V0.625C14.5833 0.279999 14.8633 0 15.2083 0C15.5533 0 15.8333 0.279999 15.8333 0.625V4.375C15.8333 4.72 15.5533 5 15.2083 5Z"
                    fill="currentColor"
                  />
                  <circle
                    cx="5"
                    cy="12"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="10"
                    cy="12"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="5"
                    cy="15"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="10"
                    cy="15"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="15"
                    fill="currentColor"
                    r="1"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0"
                  >
                    <rect
                      fill="white"
                      height="1em"
                      width="1em"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Start Date"
            >
              16 May 2021
            </div>
          </div>
          <div
            class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M17.7083 20H2.29172C1.02753 20 0 18.9725 0 17.7083V3.95831C0 2.69412 1.02753 1.66675 2.29172 1.66675H17.7083C18.9725 1.66675 20 2.69412 20 3.95831V17.7083C20 18.9725 18.9725 20 17.7083 20ZM2.29172 2.91675C1.71753 2.91675 1.25 3.38412 1.25 3.95831V17.7083C1.25 18.2825 1.71753 18.75 2.29172 18.75H17.7083C18.2825 18.75 18.75 18.2825 18.75 17.7083V3.95831C18.75 3.38412 18.2825 2.91675 17.7083 2.91675H2.29172Z"
                    fill="currentColor"
                  />
                  <path
                    d="M19.375 7.91675H0.625C0.279999 7.91675 0 7.63675 0 7.29175C0 6.94675 0.279999 6.66675 0.625 6.66675H19.375C19.72 6.66675 20 6.94675 20 7.29175C20 7.63675 19.72 7.91675 19.375 7.91675Z"
                    fill="currentColor"
                  />
                  <path
                    d="M4.79169 5C4.44669 5 4.16669 4.72 4.16669 4.375V0.625C4.16669 0.279999 4.44669 0 4.79169 0C5.13669 0 5.41669 0.279999 5.41669 0.625V4.375C5.41669 4.72 5.13669 5 4.79169 5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M15.2083 5C14.8633 5 14.5833 4.72 14.5833 4.375V0.625C14.5833 0.279999 14.8633 0 15.2083 0C15.5533 0 15.8333 0.279999 15.8333 0.625V4.375C15.8333 4.72 15.5533 5 15.2083 5Z"
                    fill="currentColor"
                  />
                  <circle
                    cx="5"
                    cy="12"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="10"
                    cy="12"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="5"
                    cy="15"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="10"
                    cy="15"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="15"
                    fill="currentColor"
                    r="1"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0"
                  >
                    <rect
                      fill="white"
                      height="1em"
                      width="1em"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Renewal Date"
            >
              01 Mar 2022
            </div>
          </div>
          <div
            class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Frequency"
            >
              Monthly
            </div>
          </div>
          <div
            class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    clip-rule="evenodd"
                    d="M13.6903 0.0656733C13.1939 -0.0669626 12.6742 0.0028151 12.23 0.261338L3.44771 5.37422H1.93911C0.86957 5.37422 0 6.24374 0 7.31333V18.0612C0 19.1307 0.869524 20.0003 1.93911 20.0003H17.1653C18.2348 20.0003 19.1044 19.1308 19.1044 18.0612V15.392C19.629 15.1621 20 14.642 20 14.0307V11.3438C20 10.7325 19.629 10.2124 19.1044 9.98254V7.31333C19.1044 6.32232 18.3562 5.51312 17.3983 5.39706L14.8641 0.970641C14.6063 0.52126 14.1891 0.199222 13.6903 0.0656733ZM12.8298 1.29066C12.9981 1.19218 13.194 1.16604 13.3822 1.21625C13.5254 1.25457 13.6506 1.33351 13.7461 1.44409L6.9958 5.37422H5.81531L12.8298 1.29066ZM10.5439 5.37422H9.36323L14.3499 2.47087L14.6452 2.98649L10.5439 5.37422ZM16.0122 5.37422H12.9114L15.237 4.02025L16.0122 5.37422ZM1.19125 7.31333C1.19125 6.90122 1.527 6.56547 1.93911 6.56547H17.1653C17.5774 6.56547 17.9131 6.90122 17.9131 7.31333V9.85251H15.3739C13.8106 9.85251 12.5392 11.1239 12.5392 12.6873C12.5392 14.2506 13.8106 15.522 15.3739 15.522H17.9131V18.0612C17.9131 18.4733 17.5774 18.809 17.1653 18.809H1.93911C1.527 18.809 1.19125 18.4733 1.19125 18.0612V7.31333ZM13.7304 12.6873C13.7304 11.781 14.4676 11.0437 15.3739 11.0437H18.5087C18.6742 11.0437 18.8088 11.1783 18.8088 11.3438V14.0307C18.8088 14.1962 18.6742 14.3308 18.5087 14.3308H15.3739C14.4676 14.3308 13.7304 13.5936 13.7304 12.6873Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0"
                  >
                    <rect
                      fill="white"
                      height="20.0003"
                      width="20"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Cost"
            >
              £300
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Status"
            >
              <span
                class="e1vxext9-el-intent-danger e1cp9zgf-el-status-indicator"
              />
               
              Cancelled
            </div>
          </div>
          <div
            class="e1fmntjl-el-table-cta-cell"
          >
            <div
              class="ewmoxzc-el-table-cta-icon-container"
            >
              <span
                class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                style="font-size: 1.2rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                    fill="currentColor"
                  />
                  <path
                    d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="e1nnyshg-el-pagination-wrap"
    >
      <div
        class="ex6bmfc-el-pagination-text"
      >
        <strong>
          1
        </strong>
         of 
        10
      </div>
      <button
        class="e1yynswi-el-pagination-button"
        data-testid="back-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L8 9.39711L8 1.60289L2 5.5Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <button
        class="e1yynswi-el-pagination-button"
        data-testid="forward-button"
        type="button"
      >
        <span
          class="e1g9l338-el-pagination-primary ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 5.5L3 9.39711L3 1.60289L9 5.5Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SettingsSubscriptionsPage should match snapshot for mobile view 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          Subscriptions
        </h1>
        <div
          class="eay05y4-el-button-group"
        >
          <div
            class="e1i2en9o-el-button-group-align-right ebqwrow-el-button-group-inner"
          >
            <button
              class="e1ymtwpu-el-intent-low eqfkc7t-el-button"
            >
              Controls
            </button>
          </div>
        </div>
      </div>
      <div
        class="ebhrnzh-el-loader-container"
      >
        <div
          class="eq1m1jz-el-loader"
        >
          <div
            class="exikdu1-el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        class="ec47sgk-el-mb11 elkdvoz-el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="7"
      >
        <div
          class="e1co3p83-el-table-headers-row"
        >
          <div
            class="e1mqmoqy-el-span2 e1qy4g2u-el-table-header"
          >
            Type
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Start Date
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Renewal Date
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Frequency
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Cost
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Status
          </div>
          <div
            class="e1qy4g2u-el-table-header"
          >
            Cancel Subscription
          </div>
        </div>
        <div
          class="e1gfmg2g-el-table-row-container"
        >
          <div
            class="es3tf1j-el-table-row"
          >
            <div
              class="e1mqmoqy-el-span2 eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Type"
              >
                Developer edition license for test@example.com
              </div>
            </div>
            <div
              class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M17.7083 20H2.29172C1.02753 20 0 18.9725 0 17.7083V3.95831C0 2.69412 1.02753 1.66675 2.29172 1.66675H17.7083C18.9725 1.66675 20 2.69412 20 3.95831V17.7083C20 18.9725 18.9725 20 17.7083 20ZM2.29172 2.91675C1.71753 2.91675 1.25 3.38412 1.25 3.95831V17.7083C1.25 18.2825 1.71753 18.75 2.29172 18.75H17.7083C18.2825 18.75 18.75 18.2825 18.75 17.7083V3.95831C18.75 3.38412 18.2825 2.91675 17.7083 2.91675H2.29172Z"
                      fill="currentColor"
                    />
                    <path
                      d="M19.375 7.91675H0.625C0.279999 7.91675 0 7.63675 0 7.29175C0 6.94675 0.279999 6.66675 0.625 6.66675H19.375C19.72 6.66675 20 6.94675 20 7.29175C20 7.63675 19.72 7.91675 19.375 7.91675Z"
                      fill="currentColor"
                    />
                    <path
                      d="M4.79169 5C4.44669 5 4.16669 4.72 4.16669 4.375V0.625C4.16669 0.279999 4.44669 0 4.79169 0C5.13669 0 5.41669 0.279999 5.41669 0.625V4.375C5.41669 4.72 5.13669 5 4.79169 5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M15.2083 5C14.8633 5 14.5833 4.72 14.5833 4.375V0.625C14.5833 0.279999 14.8633 0 15.2083 0C15.5533 0 15.8333 0.279999 15.8333 0.625V4.375C15.8333 4.72 15.5533 5 15.2083 5Z"
                      fill="currentColor"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="10"
                      cy="12"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="15"
                      cy="12"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="15"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="10"
                      cy="15"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="15"
                      cy="15"
                      fill="currentColor"
                      r="1"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0"
                    >
                      <rect
                        fill="white"
                        height="1em"
                        width="1em"
                      />
                    </clippath>
                  </defs>
                </svg>
              </span>
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Start Date"
              >
                16 May 2021
              </div>
            </div>
            <div
              class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M17.7083 20H2.29172C1.02753 20 0 18.9725 0 17.7083V3.95831C0 2.69412 1.02753 1.66675 2.29172 1.66675H17.7083C18.9725 1.66675 20 2.69412 20 3.95831V17.7083C20 18.9725 18.9725 20 17.7083 20ZM2.29172 2.91675C1.71753 2.91675 1.25 3.38412 1.25 3.95831V17.7083C1.25 18.2825 1.71753 18.75 2.29172 18.75H17.7083C18.2825 18.75 18.75 18.2825 18.75 17.7083V3.95831C18.75 3.38412 18.2825 2.91675 17.7083 2.91675H2.29172Z"
                      fill="currentColor"
                    />
                    <path
                      d="M19.375 7.91675H0.625C0.279999 7.91675 0 7.63675 0 7.29175C0 6.94675 0.279999 6.66675 0.625 6.66675H19.375C19.72 6.66675 20 6.94675 20 7.29175C20 7.63675 19.72 7.91675 19.375 7.91675Z"
                      fill="currentColor"
                    />
                    <path
                      d="M4.79169 5C4.44669 5 4.16669 4.72 4.16669 4.375V0.625C4.16669 0.279999 4.44669 0 4.79169 0C5.13669 0 5.41669 0.279999 5.41669 0.625V4.375C5.41669 4.72 5.13669 5 4.79169 5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M15.2083 5C14.8633 5 14.5833 4.72 14.5833 4.375V0.625C14.5833 0.279999 14.8633 0 15.2083 0C15.5533 0 15.8333 0.279999 15.8333 0.625V4.375C15.8333 4.72 15.5533 5 15.2083 5Z"
                      fill="currentColor"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="10"
                      cy="12"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="15"
                      cy="12"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="15"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="10"
                      cy="15"
                      fill="currentColor"
                      r="1"
                    />
                    <circle
                      cx="15"
                      cy="15"
                      fill="currentColor"
                      r="1"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0"
                    >
                      <rect
                        fill="white"
                        height="1em"
                        width="1em"
                      />
                    </clippath>
                  </defs>
                </svg>
              </span>
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Renewal Date"
              >
                01 Mar 2022
              </div>
            </div>
            <div
              class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Frequency"
              >
                Monthly
              </div>
            </div>
            <div
              class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      clip-rule="evenodd"
                      d="M13.6903 0.0656733C13.1939 -0.0669626 12.6742 0.0028151 12.23 0.261338L3.44771 5.37422H1.93911C0.86957 5.37422 0 6.24374 0 7.31333V18.0612C0 19.1307 0.869524 20.0003 1.93911 20.0003H17.1653C18.2348 20.0003 19.1044 19.1308 19.1044 18.0612V15.392C19.629 15.1621 20 14.642 20 14.0307V11.3438C20 10.7325 19.629 10.2124 19.1044 9.98254V7.31333C19.1044 6.32232 18.3562 5.51312 17.3983 5.39706L14.8641 0.970641C14.6063 0.52126 14.1891 0.199222 13.6903 0.0656733ZM12.8298 1.29066C12.9981 1.19218 13.194 1.16604 13.3822 1.21625C13.5254 1.25457 13.6506 1.33351 13.7461 1.44409L6.9958 5.37422H5.81531L12.8298 1.29066ZM10.5439 5.37422H9.36323L14.3499 2.47087L14.6452 2.98649L10.5439 5.37422ZM16.0122 5.37422H12.9114L15.237 4.02025L16.0122 5.37422ZM1.19125 7.31333C1.19125 6.90122 1.527 6.56547 1.93911 6.56547H17.1653C17.5774 6.56547 17.9131 6.90122 17.9131 7.31333V9.85251H15.3739C13.8106 9.85251 12.5392 11.1239 12.5392 12.6873C12.5392 14.2506 13.8106 15.522 15.3739 15.522H17.9131V18.0612C17.9131 18.4733 17.5774 18.809 17.1653 18.809H1.93911C1.527 18.809 1.19125 18.4733 1.19125 18.0612V7.31333ZM13.7304 12.6873C13.7304 11.781 14.4676 11.0437 15.3739 11.0437H18.5087C18.6742 11.0437 18.8088 11.1783 18.8088 11.3438V14.0307C18.8088 14.1962 18.6742 14.3308 18.5087 14.3308H15.3739C14.4676 14.3308 13.7304 13.5936 13.7304 12.6873Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0"
                    >
                      <rect
                        fill="white"
                        height="20.0003"
                        width="20"
                      />
                    </clippath>
                  </defs>
                </svg>
              </span>
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Cost"
              >
                £300
              </div>
            </div>
            <div
              class="e4zpaja-el-table-cell"
            >
              <div
                class="e1t8i3z1-el-table-cell-content"
                data-narrow-label="Status"
              >
                <span
                  class="e1vxext9-el-intent-danger e1cp9zgf-el-status-indicator"
                />
                 
                Cancelled
              </div>
            </div>
            <div
              class="e1fmntjl-el-table-cta-cell"
            >
              <div
                class="ewmoxzc-el-table-cta-icon-container"
              >
                <span
                  class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                      fill="currentColor"
                    />
                    <path
                      d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="e1nnyshg-el-pagination-wrap"
      >
        <div
          class="ex6bmfc-el-pagination-text"
        >
          <strong>
            1
          </strong>
           of 
          10
        </div>
        <button
          class="e1yynswi-el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 5.5L8 9.39711L8 1.60289L2 5.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="e1yynswi-el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="e1g9l338-el-pagination-primary ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 5.5L3 9.39711L3 1.60289L9 5.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="evblxhy-el-title"
      >
        Subscriptions
      </h1>
      <div
        class="eay05y4-el-button-group"
      >
        <div
          class="e1i2en9o-el-button-group-align-right ebqwrow-el-button-group-inner"
        >
          <button
            class="e1ymtwpu-el-intent-low eqfkc7t-el-button"
          >
            Controls
          </button>
        </div>
      </div>
    </div>
    <div
      class="ebhrnzh-el-loader-container"
    >
      <div
        class="eq1m1jz-el-loader"
      >
        <div
          class="exikdu1-el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      class="ec47sgk-el-mb11 elkdvoz-el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="7"
    >
      <div
        class="e1co3p83-el-table-headers-row"
      >
        <div
          class="e1mqmoqy-el-span2 e1qy4g2u-el-table-header"
        >
          Type
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Start Date
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Renewal Date
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Frequency
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Cost
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Status
        </div>
        <div
          class="e1qy4g2u-el-table-header"
        >
          Cancel Subscription
        </div>
      </div>
      <div
        class="e1gfmg2g-el-table-row-container"
      >
        <div
          class="es3tf1j-el-table-row"
        >
          <div
            class="e1mqmoqy-el-span2 eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Type"
            >
              Developer edition license for test@example.com
            </div>
          </div>
          <div
            class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M17.7083 20H2.29172C1.02753 20 0 18.9725 0 17.7083V3.95831C0 2.69412 1.02753 1.66675 2.29172 1.66675H17.7083C18.9725 1.66675 20 2.69412 20 3.95831V17.7083C20 18.9725 18.9725 20 17.7083 20ZM2.29172 2.91675C1.71753 2.91675 1.25 3.38412 1.25 3.95831V17.7083C1.25 18.2825 1.71753 18.75 2.29172 18.75H17.7083C18.2825 18.75 18.75 18.2825 18.75 17.7083V3.95831C18.75 3.38412 18.2825 2.91675 17.7083 2.91675H2.29172Z"
                    fill="currentColor"
                  />
                  <path
                    d="M19.375 7.91675H0.625C0.279999 7.91675 0 7.63675 0 7.29175C0 6.94675 0.279999 6.66675 0.625 6.66675H19.375C19.72 6.66675 20 6.94675 20 7.29175C20 7.63675 19.72 7.91675 19.375 7.91675Z"
                    fill="currentColor"
                  />
                  <path
                    d="M4.79169 5C4.44669 5 4.16669 4.72 4.16669 4.375V0.625C4.16669 0.279999 4.44669 0 4.79169 0C5.13669 0 5.41669 0.279999 5.41669 0.625V4.375C5.41669 4.72 5.13669 5 4.79169 5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M15.2083 5C14.8633 5 14.5833 4.72 14.5833 4.375V0.625C14.5833 0.279999 14.8633 0 15.2083 0C15.5533 0 15.8333 0.279999 15.8333 0.625V4.375C15.8333 4.72 15.5533 5 15.2083 5Z"
                    fill="currentColor"
                  />
                  <circle
                    cx="5"
                    cy="12"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="10"
                    cy="12"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="5"
                    cy="15"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="10"
                    cy="15"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="15"
                    fill="currentColor"
                    r="1"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0"
                  >
                    <rect
                      fill="white"
                      height="1em"
                      width="1em"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Start Date"
            >
              16 May 2021
            </div>
          </div>
          <div
            class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M17.7083 20H2.29172C1.02753 20 0 18.9725 0 17.7083V3.95831C0 2.69412 1.02753 1.66675 2.29172 1.66675H17.7083C18.9725 1.66675 20 2.69412 20 3.95831V17.7083C20 18.9725 18.9725 20 17.7083 20ZM2.29172 2.91675C1.71753 2.91675 1.25 3.38412 1.25 3.95831V17.7083C1.25 18.2825 1.71753 18.75 2.29172 18.75H17.7083C18.2825 18.75 18.75 18.2825 18.75 17.7083V3.95831C18.75 3.38412 18.2825 2.91675 17.7083 2.91675H2.29172Z"
                    fill="currentColor"
                  />
                  <path
                    d="M19.375 7.91675H0.625C0.279999 7.91675 0 7.63675 0 7.29175C0 6.94675 0.279999 6.66675 0.625 6.66675H19.375C19.72 6.66675 20 6.94675 20 7.29175C20 7.63675 19.72 7.91675 19.375 7.91675Z"
                    fill="currentColor"
                  />
                  <path
                    d="M4.79169 5C4.44669 5 4.16669 4.72 4.16669 4.375V0.625C4.16669 0.279999 4.44669 0 4.79169 0C5.13669 0 5.41669 0.279999 5.41669 0.625V4.375C5.41669 4.72 5.13669 5 4.79169 5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M15.2083 5C14.8633 5 14.5833 4.72 14.5833 4.375V0.625C14.5833 0.279999 14.8633 0 15.2083 0C15.5533 0 15.8333 0.279999 15.8333 0.625V4.375C15.8333 4.72 15.5533 5 15.2083 5Z"
                    fill="currentColor"
                  />
                  <circle
                    cx="5"
                    cy="12"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="10"
                    cy="12"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="5"
                    cy="15"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="10"
                    cy="15"
                    fill="currentColor"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="15"
                    fill="currentColor"
                    r="1"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0"
                  >
                    <rect
                      fill="white"
                      height="1em"
                      width="1em"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Renewal Date"
            >
              01 Mar 2022
            </div>
          </div>
          <div
            class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Frequency"
            >
              Monthly
            </div>
          </div>
          <div
            class="eqy88gj-el-table-cell-has-dark-text e4zpaja-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    clip-rule="evenodd"
                    d="M13.6903 0.0656733C13.1939 -0.0669626 12.6742 0.0028151 12.23 0.261338L3.44771 5.37422H1.93911C0.86957 5.37422 0 6.24374 0 7.31333V18.0612C0 19.1307 0.869524 20.0003 1.93911 20.0003H17.1653C18.2348 20.0003 19.1044 19.1308 19.1044 18.0612V15.392C19.629 15.1621 20 14.642 20 14.0307V11.3438C20 10.7325 19.629 10.2124 19.1044 9.98254V7.31333C19.1044 6.32232 18.3562 5.51312 17.3983 5.39706L14.8641 0.970641C14.6063 0.52126 14.1891 0.199222 13.6903 0.0656733ZM12.8298 1.29066C12.9981 1.19218 13.194 1.16604 13.3822 1.21625C13.5254 1.25457 13.6506 1.33351 13.7461 1.44409L6.9958 5.37422H5.81531L12.8298 1.29066ZM10.5439 5.37422H9.36323L14.3499 2.47087L14.6452 2.98649L10.5439 5.37422ZM16.0122 5.37422H12.9114L15.237 4.02025L16.0122 5.37422ZM1.19125 7.31333C1.19125 6.90122 1.527 6.56547 1.93911 6.56547H17.1653C17.5774 6.56547 17.9131 6.90122 17.9131 7.31333V9.85251H15.3739C13.8106 9.85251 12.5392 11.1239 12.5392 12.6873C12.5392 14.2506 13.8106 15.522 15.3739 15.522H17.9131V18.0612C17.9131 18.4733 17.5774 18.809 17.1653 18.809H1.93911C1.527 18.809 1.19125 18.4733 1.19125 18.0612V7.31333ZM13.7304 12.6873C13.7304 11.781 14.4676 11.0437 15.3739 11.0437H18.5087C18.6742 11.0437 18.8088 11.1783 18.8088 11.3438V14.0307C18.8088 14.1962 18.6742 14.3308 18.5087 14.3308H15.3739C14.4676 14.3308 13.7304 13.5936 13.7304 12.6873Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0"
                  >
                    <rect
                      fill="white"
                      height="20.0003"
                      width="20"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Cost"
            >
              £300
            </div>
          </div>
          <div
            class="e4zpaja-el-table-cell"
          >
            <div
              class="e1t8i3z1-el-table-cell-content"
              data-narrow-label="Status"
            >
              <span
                class="e1vxext9-el-intent-danger e1cp9zgf-el-status-indicator"
              />
               
              Cancelled
            </div>
          </div>
          <div
            class="e1fmntjl-el-table-cta-cell"
          >
            <div
              class="ewmoxzc-el-table-cta-icon-container"
            >
              <span
                class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                style="font-size: 1.2rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                    fill="currentColor"
                  />
                  <path
                    d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                    fill="currentColor"
                  />
                  <path
                    d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="e1nnyshg-el-pagination-wrap"
    >
      <div
        class="ex6bmfc-el-pagination-text"
      >
        <strong>
          1
        </strong>
         of 
        10
      </div>
      <button
        class="e1yynswi-el-pagination-button"
        data-testid="back-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 5.5L8 9.39711L8 1.60289L2 5.5Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <button
        class="e1yynswi-el-pagination-button"
        data-testid="forward-button"
        type="button"
      >
        <span
          class="e1g9l338-el-pagination-primary ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 12 12"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 5.5L3 9.39711L3 1.60289L9 5.5Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
